--- a/video_notebooks/03_pytorch_computer_vision_video.ipynb
+++ b/video_notebooks/03_pytorch_computer_vision_video.ipynb
@@ -3569,7 +3569,7 @@
    "cell_type": "code",
    "source": [
     "plt.imshow(image.squeeze(), cmap=\"gray\")\n",
-    "plt.title(class_names[label]);\n",
+    "plt.title(class_names[label])\n",
     "plt.axis(False);"
    ],
    "metadata": {
