--- a/video_notebooks/03_pytorch_computer_vision_video.ipynb
+++ b/video_notebooks/03_pytorch_computer_vision_video.ipynb
@@ -4268,9 +4268,8 @@
     "\n",
     "# Calculate training time\n",
     "train_time_end_on_cpu = timer()\n",
-    "total_train_time_model_0 = print_train_time(start=train_time_start_on_cpu,\n",
-    "                                            end=train_time_end_on_cpu,\n",
-    "                                            device=str(next(model_0.parameters()).device))"
+    "total_train_time_model_0 = print_train_time(start=train_time_start_on_cpu,                                           end=train_time_end_on_cpu,\n",
+    "device=str(next(model_0.parameters()).device))"
    ],
    "metadata": {
     "colab": {
